Fix group label editor being able to appear behind other elements.

--- a/src/less/views/group-labels.less
+++ b/src/less/views/group-labels.less
@@ -3,6 +3,12 @@
     border: @spreadsheetSelectedBorder;
 }
 
+.group-label-editor {
+    position: sticky;
+    top: 10px;
+    z-index: 100;
+}
+
 .group-label-input {
     cursor: pointer;
 }
